Upgrade Spring Boot to 3.3.13 and Java to 21 using OpenRewrite recipes